# fireauth

./: .gitignore  Cargo.toml  README.md
src/: error.rs  lib.rs
src/api/: mod.rs  sign_in.rs  sign_up.rs  token.rs  user.rs
